syntax = "proto3";
import "portunus-api.proto";

package org.slusarczykr.portunus.cache.paxos.api;

option java_package = "org.slusarczykr.portunus.cache.paxos.api";
option java_outer_classname = "PortunusPaxosApiProtos";

message SyncServerStateRequest {
  org.slusarczykr.portunus.cache.api.AddressDTO from = 1;
  int64 serverId = 2;
  repeated org.slusarczykr.portunus.cache.api.PartitionDTO partition = 3;
  repeated org.slusarczykr.portunus.cache.api.VirtualPortunusNodeDTO virtualPortunusNode = 4;
}

message AppendEntry {
  org.slusarczykr.portunus.cache.api.AddressDTO from = 1;
  int64 serverId = 2;
  int64 term = 3;
}

message AppendEntryResponse {
  int64 serverId = 1;
  bool conflict = 2;
}

message RequestVoteResponse {
  bool accepted = 1;
  int64 serverId = 2;
  int64 term = 3;
}
