syntax = "proto3";
import "portunus-api.proto";

package org.slusarczykr.portunus.cache.api.query;

option java_package = "org.slusarczykr.portunus.cache.api.query";
option java_outer_classname = "PortunusQueryApiProtos";

message ContainsAnyEntryQuery {
  AddressDTO from = 1;
  string cacheName = 2;
}

message ContainsAnyEntryDocument {
  bool anyEntry = 1;
}

message ContainsEntryQuery {
  AddressDTO from = 1;
  string cacheName = 2;
  string entryKeyType = 3;
  bytes entryKey = 4;
}

message ContainsEntryDocument {
  bool containsEntry = 1;
}
