syntax = "proto3";
import "portunus-api.proto";

package org.slusarczykr.portunus.cache.api.test;

option java_package = "org.slusarczykr.portunus.cache.api.test";
option java_outer_classname = "PortunusTestApiProtos";

message ContainsStringEntryQuery {
  AddressDTO from = 1;
  string cacheName = 2;
  string key = 3;
}

message GetStringEntryQuery {
  AddressDTO from = 1;
  string cacheName = 2;
  string key = 3;
}

message GetStringEntriesQuery {
  AddressDTO from = 1;
  string cacheName = 2;
  repeated string key = 3;
}

message GetStringCacheDocument {
  repeated StringCacheEntryDTO cacheEntries = 1;
}

message GetStringEntryDocument {
  StringCacheEntryDTO cacheEntry = 1;
}

message StringCacheEntryDTO {
  string key = 1;
  string value = 2;
}

message PutStringEntryCommand {
  AddressDTO from = 1;
  string cacheName = 2;
  StringCacheEntryDTO cacheEntry = 3;
}

message RemoveStringEntryCommand {
  AddressDTO from = 1;
  string cacheName = 2;
  string key = 3;
}

message RemoveStringEntryDocument {
  StringCacheEntryDTO cacheEntry = 1;
}
